--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
+    "@mui/styles": "^5.2.3",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-material-ui-carousel": "^3.1.1",
+    "react-swipeable": "^6.2.0",
+    "react-swipeable-views": "^0.14.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
