--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-material-ui-carousel": "^3.1.1",
+    "react-router-dom": "^6.2.1",
     "react-swipeable": "^6.2.0",
     "react-swipeable-views": "^0.14.0",
     "styled-components": "^5.3.3"
